--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <section data-anchor="top" class="page-section top">
                 <div class="page-section__wrapper">
                     <div class="_container">
-                        <div class="top__inner">
+                        <div class="top__inner main-mavic__inner">
                             <h1 class="title top__title">
                                 Mavic 2 Pro
                             </h1>
